<resources>
    <string name="app_name">lab04</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandWiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="foyo">FroYo is premium self-served frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="chose_delivery_method">Chose a delivery Method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">status</string>
    <string name="action_favorites">favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
</resources>
