<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="0dp"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:layout_below="@+id/textintro"
        android:layout_alignParentStart="true"
        android:text="@string/choose_a_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="125dp"
        android:layout_height="106dp"
        android:layout_below="@+id/choose_desert"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-1dp"
        android:contentDescription="@string/donuts"
        android:padding="@dimen/padding_regular"
        app:srcCompat="@drawable/donut_circle"
        android:onClick="showDonutOrder"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_desert"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-2dp"
        android:layout_toRightOf="@+id/donut"
        android:padding="@dimen/padding_wide"
        android:text="@string/donuts" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="127dp"
        android:layout_height="100dp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@+id/donut"
        android:contentDescription="@string/ice_cream_sandWiches"
        app:srcCompat="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="258dp"
        android:layout_height="122dp"
        android:layout_below="@+id/donut"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-23dp"
        android:layout_toRightOf="@+id/ice_cream"
        android:padding="@dimen/padding_wide"
        android:text="@string/ice_cream_sandWiches" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="127dp"
        android:layout_height="85dp"
        android:padding="@dimen/padding_regular"
        android:layout_below="@+id/ice_cream"
        android:contentDescription="@string/foyo"
        app:srcCompat="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="184dp"
        android:layout_height="70dp"
        android:layout_below="@+id/ice_cream"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="-2dp"
        android:layout_toRightOf="@+id/froyo"
        android:text="@string/foyo" />


</RelativeLayout>